<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verification"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#FFFFFF"
    >


    <ImageView
        android:layout_width="245dp"
        android:layout_height="215dp"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_4"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="26sp"
        android:textStyle="bold" />




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="username"
                android:background="#F1EFEF"
                android:hint="@string/enter_login"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="15dp"
                android:textSize="21sp"
                tools:ignore="RtlSymmetry" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="password"
                android:background="#F1EFEF"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="15dp"
                android:textSize="21sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/continueBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/orange"
                android:text="@string/log_in_btn"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/orange"
                android:text="@string/sign_up_btn"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/or"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"

                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>